:wrench: Integrate lint
Lint integrated
Code updated to pass quality tool

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+
     <string name="app_name">Alkaa</string>
-    <string name="action_settings">Settings</string>
+
+    <!-- Task screen -->
+    <string name="task_menu_preferences">Preferences</string>
 </resources>
