--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- Task screen -->
     <string name="task_menu_preferences">Preferences</string>
+    <string name="task_menu_category">Categories</string>
     <string name="task_error_empty">Empty field</string>
 
     <string-array
