--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="task_menu_category">Categories</string>
     <string name="task_error_empty">Empty field</string>
 
+    <!-- New Category screen -->
+    <string name="new_category_add">Add category</string>
+
     <string-array
         name="task_dialog_options">
         <item>Delete</item>
