:white_check_mark: Add initial Category screen tests
Espresso tests added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="task_menu_category">Categories</string>
     <string name="task_error_empty">Empty field</string>
 
+    <!-- Category screen -->
+    <string name="category_list_label">Categories</string>
+
     <!-- New Category screen -->
     <string name="new_category_add">Add category</string>
 
