:sparkles: Show and filter all categories in the drawer
All the inserted categories are now show in the drawer and can be
filtered to show only the chosen one

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 
     <string name="app_name">Alkaa</string>
 
+    <!-- Main drawer -->
+    <string name="drawer_menu_all_tasks">All Tasks</string>
+
     <!-- Task screen -->
     <string name="task_menu_preferences">Preferences</string>
     <string name="task_menu_category">Categories</string>
