:sparkles: Implement feature to delete Categories
Category structure updated to support Category removal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <!-- Category screen -->
     <string name="category_list_label">Categories</string>
+    <string name="category_list_menu_remove">Remove</string>
 
     <!-- New Category screen -->
     <string name="new_category_add">Add category</string>
