--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
     <!-- New Category screen -->
     <string name="new_category_add">Add category</string>
 
+    <!-- Task notification channel -->
+    <string name="channel_task_name">Task alarms</string>
+    <string name="channel_task_description">Notifications to remind tasks</string>
+
     <string-array
         name="task_dialog_options">
         <item>Delete</item>
