:bug: Due date is showing after removal
[root cause] BindingAdapter was only updating text if the calendar
was not null

[solution] Set the TextView to null if calendar is null

[extras] Test added to validate this scenario and simple refactor made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="task_menu_category">Categories</string>
     <string name="task_error_empty">Empty field</string>
 
+    <!-- Task details -->
+    <string name="task_details_alarm_removed">Alarm removed</string>
+
     <!-- Category screen -->
     <string name="category_list_label">Categories</string>
     <string name="category_list_menu_remove">Remove</string>
