:sparkles: Prepopulate Category table with default values
Three default categories added by default in the application
Refactor regarding the Provider (formerly Repository)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
 
     <string name="app_name">Alkaa</string>
 
+    <!-- Task database -->
+    <string name="category_default_personal">Personal</string>
+    <string name="category_default_work">Work</string>
+    <string name="category_default_shopping">Shopping List</string>
+
     <!-- Main drawer -->
     <string name="drawer_menu_all_tasks">All Tasks</string>
 
