:lipstick: Update layout to add a new item
Layout updated to be more clear how to add a new item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="task_menu_preferences">Preferences</string>
     <string name="task_menu_category">Categories</string>
     <string name="task_error_empty">Empty field</string>
+    <string name="task_add_new">Add new task</string>
 
     <!-- Task details -->
     <string name="task_details_alarm_removed">Alarm removed</string>
