--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
 
     <!-- Task details -->
     <string name="task_details_alarm_removed">Alarm removed</string>
+    <string name="task_details_description_hint">Add a description</string>
 
     <!-- Category screen -->
     <string name="category_list_label">Categories</string>
