--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="category_list_dialog_remove_description">Deleting \"%s\" will also delete all the tasks under this category.</string>
     <string name="category_list_dialog_remove_positive">Remove</string>
     <string name="category_list_dialog_remove_negative">Cancel</string>
+    <string name="category_list_empty">No categories</string>
 
     <!-- New Category screen -->
     <string name="new_category_add">Add category</string>
