--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
 
     <!-- Category  screen-->
     <string name="category_detail_title">Add New Category</string>
+    <string name="category_detail_hint">Name</string>
 
     <!-- About screen-->
     <string name="about_detail_title">About</string>
