:bug: Avoid autocomplete in Category name
Avoid autocomplete user name in Category name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
 
     <!-- Category  screen-->
     <string name="category_detail_title">Add New Category</string>
-    <string name="category_detail_hint">Name</string>
+    <string name="category_detail_hint">Category name</string>
 
     <!-- About screen-->
     <string name="about_detail_title">About</string>
