--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="task_add_new">Add new task</string>
 
     <!-- Task details -->
-    <string name="task_details_category_empty">No categories</string>
+    <string name="task_details_category_empty">No category</string>
     <string name="task_details_alarm_removed">Alarm removed</string>
     <string name="task_details_description_hint">Add a description</string>
     <string name="task_details_alarm_hint">Add an alarm</string>
@@ -30,18 +30,19 @@
     <string name="category_list_dialog_remove_description">Deleting \"%s\" will also delete all the tasks under this category.</string>
     <string name="category_list_dialog_remove_positive">Remove</string>
     <string name="category_list_dialog_remove_negative">Cancel</string>
-    <string name="category_list_empty">No categories</string>
+    <string name="category_list_empty">No category</string>
 
     <!-- New Category screen -->
-    <string name="new_category_add">Add category</string>
+    <string name="new_category_add">Add</string>
 
     <!-- Task notification channel -->
     <string name="channel_task_name">Task alarms</string>
-    <string name="channel_task_description">Notifications to remind tasks</string>
+    <string name="channel_task_description">Notifications for reminders</string>
 
     <!-- Preference  screen-->
     <string name="preference_title">Preferences</string>
     <string name="preference_item_about">About</string>
+    <string name="preference_item_version">Version</string>
 
     <!-- Category  screen-->
     <string name="category_detail_title">Add New Category</string>
@@ -53,7 +54,7 @@
     <string name="about_button_project">Visit project on GitHub</string>
 
     <string-array name="task_dialog_options">
-        <item>Delete</item>
+        <item>Remove</item>
     </string-array>
 
 </resources>
