--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <!-- Main drawer -->
     <string name="drawer_menu_all_tasks">All Tasks</string>
+    <string name="drawer_menu_completed_tasks">Completed</string>
     <string name="drawer_menu_manage_categories">Manage categories</string>
 
     <!-- Task screen -->
