:globe_with_meridians: Add Localization strings
Strings localized to PT-BR

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -36,4 +36,5 @@
     <string-array name="task_dialog_options">
         <item>Remover</item>
     </string-array>
+    <string name="drawer_menu_completed_tasks">Finalizadas</string>
 </resources>
