--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="task_menu_preferences">Preferences</string>
     <string name="task_error_empty">Empty field</string>
     <string name="task_add_new">Add new task</string>
+    <string name="task_snackbar_completed">Moved to \'Completed\'</string>
 
     <!-- Task details -->
     <string name="task_details_category_empty">No category</string>
