:globe_with_meridians: Add Localization strings
Strings localized to PT-BR

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -37,4 +37,5 @@
         <item>Remover</item>
     </string-array>
     <string name="drawer_menu_completed_tasks">Finalizadas</string>
+    <string name="task_snackbar_completed">Movido para \'Finalizadas\'</string>
 </resources>
