:sparkles: Add "Undo" action to revert the action
Add an action in the Snackbar to revert the complete move from the task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="task_error_empty">Empty field</string>
     <string name="task_add_new">Add new task</string>
     <string name="task_snackbar_completed">Moved to \'Completed\'</string>
+    <string name="task_snackbar_undo">Undo</string>
 
     <!-- Task details -->
     <string name="task_details_category_empty">No category</string>
