--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -38,4 +38,5 @@
     </string-array>
     <string name="drawer_menu_completed_tasks">Finalizadas</string>
     <string name="task_snackbar_completed">Movido para \'Finalizadas\'</string>
+    <string name="task_snackbar_undo">Desfazer</string>
 </resources>
