:lipstick: Show empty message in Task list
Show a simple message informing that there are no tasks in the list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="task_add_new">Add new task</string>
     <string name="task_snackbar_completed">Moved to \'Completed\'</string>
     <string name="task_snackbar_undo">Undo</string>
+    <string name="task_list_empty">No tasks</string>
 
     <!-- Task details -->
     <string name="task_details_category_empty">No category</string>
