:sparkles: Add "Done" action in the Task notification
Action added to set the Task as completed directly from the notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="channel_task_name">Task alarms</string>
     <string name="channel_task_description">Notifications for reminders</string>
 
+    <!-- Task notification -->
+    <string name="notification_completed_action">Done</string>
+
     <!-- Preference  screen-->
     <string name="preference_title">Preferences</string>
     <string name="preference_item_about">About</string>
