:speech_balloon: Add and updating notification text
Added "Done" and "Snooze" string
Brazilian Portuguese string updated

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -41,4 +41,5 @@
     <string name="task_snackbar_undo">Desfazer</string>
     <string name="task_list_empty">Sem tarefas</string>
     <string name="notification_action_completed">Concluído</string>
+    <string name="notification_action_snooze">Daqui 15 min</string>
 </resources>
