--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
 
     <!-- Task notification -->
     <string name="notification_action_completed">Done</string>
-    <string name="notification_action_snooze">Snooze</string>
+    <string name="notification_action_snooze">In 15 min</string>
 
     <!-- Preference  screen-->
     <string name="preference_title">Preferences</string>
