--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <!-- Category screen -->
     <string name="category_list_label">Categories</string>
     <string name="category_list_menu_remove">Remove</string>
+    <string name="category_list_menu_edit">Edit</string>
     <string name="category_list_dialog_remove_title">Remove category?</string>
     <string name="category_list_dialog_remove_description">Deleting \"%s\" will also delete all the tasks under this category.</string>
     <string name="category_list_dialog_remove_positive">Remove</string>
