--- a/navigation/src/main/res/values-pt-rBR/strings.xml
+++ b/navigation/src/main/res/values-pt-rBR/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="category_list_label">Categorias</string>
+    <string name="preference_title">Preferências</string>
+    <string name="about_detail_title">Sobre</string>
 </resources>
