--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Main drawer -->
     <string name="drawer_menu_all_tasks">All Tasks</string>
     <string name="drawer_menu_completed_tasks">Completed</string>
     <string name="drawer_menu_manage_categories">Manage categories</string>
 
+    <!-- Suppress `UnusedResources` due to some bug on Dynamic Features tags -->
+    <string name="dynamic_feature_title_tracker" translatable="false" tools:ignore="UnusedResources">Task Tracker</string>
 </resources>
