--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,5 @@
     <string name="drawer_menu_all_tasks">Todas as Tarefas</string>
     <string name="drawer_menu_manage_categories">Gerenciar categorias</string>
     <string name="drawer_menu_completed_tasks">Finalizadas</string>
+    <string name="drawer_menu_tracker">Acompanhamento de Tarefas</string>
 </resources>
