--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="drawer_menu_all_tasks">All Tasks</string>
     <string name="drawer_menu_completed_tasks">Completed</string>
     <string name="drawer_menu_manage_categories">Manage categories</string>
+    <string name="drawer_menu_tracker">Task Tracker</string>
 
     <!-- Suppress `UnusedResources` due to some bug on Dynamic Features tags -->
     <string name="dynamic_feature_title_tracker" translatable="false" tools:ignore="UnusedResources">Task Tracker</string>
