:speech_balloon: Add "Task Tracker" title on screen
String updated and title set on the feature screen

--- a/libraries/navigation/src/main/res/values-pt-rBR/strings.xml
+++ b/libraries/navigation/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,5 @@
     <string name="category_list_label">Categorias</string>
     <string name="preference_title">Preferências</string>
     <string name="about_detail_title">Sobre</string>
+    <string name="tracker_title">Acompanhamento de Tarefas</string>
 </resources>
