--- a/libraries/navigation/src/main/res/values/strings.xml
+++ b/libraries/navigation/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="category_list_label">Categories</string>
     <string name="about_detail_title">About</string>
     <string name="preference_title">Preferences</string>
+    <string name="tracker_title">Task Tracker</string>
+
 </resources>
