:green_heart: Fix CI issues
Localization and Magic Number issues fixed

--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -13,4 +13,5 @@
     <string name="task_snackbar_undo">Desfazer</string>
     <string name="task_list_empty">Sem tarefas</string>
     <string name="task_list_default_title">Todas as Tarefas</string>
+    <string name="task_alarm_dialog_title">Repetir alarme</string>
 </resources>
