--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -14,4 +14,7 @@
     <string name="task_list_empty">Sem tarefas</string>
     <string name="task_list_default_title">Todas as Tarefas</string>
     <string name="task_alarm_dialog_title">Repetir alarme</string>
+    <string name="task_menu_completed">Atualizar estado da tarefa</string>
+    <string name="task_status_mark_completed">Tarefa marcada como finalizada</string>
+    <string name="task_status_mark_uncompleted">Tarefa marcada como não finalizada</string>
 </resources>
