:building_construction: Add Jetpack Compose dependencies
Add all the dependencies and updates needed to make Jetpack Compose run
on Alkaa.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <!-- Suppress `UnusedResources` due to some bug on Dynamic Features tags -->
     <string name="dynamic_feature_title_tracker" translatable="false" tools:ignore="UnusedResources">Task Tracker</string>
+    <string name="title_activity_compose">Alkaa</string>
 </resources>
