--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Main drawer -->
-    <string name="drawer_menu_all_tasks">All Tasks</string>
-    <string name="drawer_menu_completed_tasks">Completed</string>
-    <string name="drawer_menu_manage_categories">Manage categories</string>
-    <string name="drawer_menu_tracker">Task Tracker</string>
-    <string name="drawer_menu_preferences">Preferences</string>
+    <!-- AppTopBar -->
+    <string name="home_title_tasks">Tasks</string>
+    <string name="home_title_search">Search</string>
+    <string name="home_title_categories">Categories</string>
+    <string name="home_title_settings">Settings</string>
 
     <!-- Suppress `UnusedResources` due to some bug on Dynamic Features tags -->
     <string name="dynamic_feature_title_tracker" translatable="false" tools:ignore="UnusedResources">Task Tracker</string>
-    <string name="title_activity_compose">Alkaa</string>
+
 </resources>
