--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="task_content_description_add_task">Add task</string>
+    <string name="task_header_empty_list">Wow! All tasks are completed!</string>
+    <string name="task_content_description_empty_list">That\'s all clear</string>
 </resources>
