:sparkles: Create error list screen
A awful error screen created to apologize for the user that about
possible issues. Ooops!

--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,6 @@
     <string name="task_content_description_add_task">Adicionar tarefa</string>
     <string name="task_header_empty_list">Uau! Todas as tarefas estão cumpridas!</string>
     <string name="task_content_description_empty_list">Sem tarefas</string>
+    <string name="task_header_error">Ops… Isso é embaraçoso…</string>
+    <string name="task_content_description_error">Algo deu errado</string>
 </resources>
