:sparkles: Create Error screen for the TaskDetail
First of all, the default/generic component was moved to :theme module
once it will probably be used in other screen as an error.
After that, the change simply added it in TaskDetail and updated the
other references to the new component.

--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="task_content_description_empty_list">That\'s all clear</string>
     <string name="task_header_error">Ops… That\'s embarrassing…</string>
     <string name="task_content_description_error">Something went wrong</string>
+    <string name="task__detail_header_error">This task is no longer available</string>
+    <string name="task__detail_content_description_error">Task not found</string>
 </resources>
