--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -5,4 +5,6 @@
     <string name="task_content_description_empty_list">Sem tarefas</string>
     <string name="task_header_error">Ops… Isso é embaraçoso…</string>
     <string name="task_content_description_error">Algo deu errado</string>
+    <string name="task__detail_header_error">A tarefa não está mais disponível</string>
+    <string name="task__detail_content_description_error">Tarefa não encontrada</string>
 </resources>
