--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="task_content_description_add_task">Add task</string>
+    <string name="task_cd_add_task">Add task</string>
     <string name="task_list_header_empty">Wow! All tasks are completed!</string>
-    <string name="task_list_content_description_empty_list">That\'s all clear</string>
+    <string name="task_list_cd_empty_list">That\'s all clear</string>
     <string name="task_list_header_error">Ops… That\'s embarrassing…</string>
-    <string name="task_list_content_description_error">Something went wrong</string>
+    <string name="task_list_cd_error">Something went wrong</string>
     <string name="task_detail_header_error">This task is no longer available</string>
-    <string name="task_detail_content_description_error">Task not found</string>
+    <string name="task_detail_cd_error">Task not found</string>
+
+    <string name="task_detail_cd_icon_category">Categories</string>
+    <string name="task_detail_cd_icon_description">Description</string>
 </resources>
