--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -9,4 +9,5 @@
     <string name="task_detail_cd_error">Tarefa não encontrada</string>
     <string name="task_detail_cd_icon_category">Categorias</string>
     <string name="task_detail_cd_icon_description">Descrição</string>
+    <string name="task_detail_category_empty_list">Sem categorias</string>
 </resources>
