--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="task_detail_cd_icon_category">Categories</string>
     <string name="task_detail_cd_icon_description">Description</string>
+
+    <string name="task_detail_category_empty_list">No categories</string>
 </resources>
