--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -10,4 +10,8 @@
     <string name="task_detail_cd_icon_category">Categorias</string>
     <string name="task_detail_cd_icon_description">Descrição</string>
     <string name="task_detail_category_empty_list">Sem categorias</string>
+    <string name="task_detail_cd_icon_alarm">Alarme</string>
+    <string name="task_detail_cd_icon_repeat_alarm">Alarme recorrente</string>
+    <string name="task_detail_alarm_no_alarm">Sem alarme</string>
+    <string name="task_detail_cd_icon_remove_alarm">Remover alarme</string>
 </resources>
