✨ Implement About screen
A very simple screen with a description and a call to action to open
the project on GitHub was created

--- a/features/preference/src/main/res/values/strings.xml
+++ b/features/preference/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="preference_title_about">About</string>
     <string name="preference_title_version">Version</string>
 
+    <string name="back_arrow_content_description">Back</string>
+
+    <string name="about_description">Alkaa (to begin, to start in Finnish) is a simple to-do list to make your life easier.\n\nIt all started when I created a project to learn and keep me updated about the latest Android components and libraries. And now it is available on it Jetpack Compose version! If you\'re a developer or an enthusiast feel free to access, copy and updated the open-source code.\n\nThanks a lot for using my app! </string>
+    <string name="about_button_project">Visit project on GitHub</string>
+    <string name="about_cd_github" translatable="false">GitHub</string>
+
 </resources>
