--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="task_detail_category_empty_list">No categories</string>
 
     <string name="task_detail_alarm_no_alarm">No alarm</string>
+
+    <string name="task_add_save">Save</string>
 </resources>
