💄 Add label in the TextField to create task
Label added and TextField updated to OutlinedTextField for better look
and feel.

--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="task_detail_alarm_no_alarm">No alarm</string>
 
     <string name="task_add_save">Save</string>
+    <string name="task_add_label">Task</string>
 </resources>
