💄 Implement Category BottomSheet content
Implemented the UI for the Add/Update Category in BottomSheet format.
I'm really proud on what's going on here.

--- a/features/category/src/main/res/values-pt-rBR/strings.xml
+++ b/features/category/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,6 @@
     <string name="category_list_header_empty">Sem categorias</string>
     <string name="category_list_cd_empty_list">Sem categorias disponíveis</string>
     <string name="category_icon_cd">Categoria</string>
+    <string name="category_sheet_title">Nome da categoria</string>
+    <string name="category_sheet_save">Salvar</string>
 </resources>
