--- a/features/category/src/main/res/values/strings.xml
+++ b/features/category/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="category_list_header_empty">No categories</string>
     <string name="category_list_cd_empty_list">No categories available</string>
     <string name="category_icon_cd">Category</string>
+    <string name="category_sheet_title">Category name</string>
+    <string name="category_sheet_save">Save</string>
 </resources>
