✨ Implement Add Floating Button in Category List
Component extracted to be used across modules and added in the Category
List.

--- a/features/category/src/main/res/values/strings.xml
+++ b/features/category/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="category_icon_cd">Category</string>
     <string name="category_sheet_title">Category name</string>
     <string name="category_sheet_save">Save</string>
+    <string name="category_cd_add_category">Add category</string>
 </resources>
