--- a/features/category/src/main/res/values-pt-rBR/strings.xml
+++ b/features/category/src/main/res/values-pt-rBR/strings.xml
@@ -5,4 +5,6 @@
     <string name="category_icon_cd">Categoria</string>
     <string name="category_sheet_title">Nome da categoria</string>
     <string name="category_sheet_save">Salvar</string>
+    <string name="category_cd_add_category">Adicionar categoria</string>
+
 </resources>
