✨ Integrate Add ViewModel with Composable
ViewModel and Composable integrate, now it is possible to add new
categories. Some refactor need in order to better hoist and adapt the
data.

--- a/features/category/src/main/res/values-pt-rBR/strings.xml
+++ b/features/category/src/main/res/values-pt-rBR/strings.xml
@@ -6,5 +6,6 @@
     <string name="category_sheet_title">Nome da categoria</string>
     <string name="category_sheet_save">Salvar</string>
     <string name="category_cd_add_category">Adicionar categoria</string>
+    <string name="category_new_placeholder">Nova categoria</string>
 
 </resources>
