✨ Integrate the Composable with new Remove Dialog
Integration done and feature to remove category when confirmed is now
implemented.

--- a/features/category/src/main/res/values-pt-rBR/strings.xml
+++ b/features/category/src/main/res/values-pt-rBR/strings.xml
@@ -3,9 +3,13 @@
     <string name="category_list_header_empty">Sem categorias</string>
     <string name="category_list_cd_empty_list">Sem categorias disponíveis</string>
     <string name="category_icon_cd">Categoria</string>
-    <string name="category_sheet_title">Nome da categoria</string>
     <string name="category_sheet_save">Salvar</string>
     <string name="category_cd_add_category">Adicionar categoria</string>
     <string name="category_new_placeholder">Nova categoria</string>
+
+    <string name="category_dialog_remove_title">Remover categoria</string>
+    <string name="category_dialog_remove_text">Você tem certeza que deseja remover essa categoria?\nRemover \"%s\" também remove todas as tarefas abaixo dessa categoria.</string>
+    <string name="category_dialog_remove_confirm">Remover</string>
+    <string name="category_dialog_remove_cancel">Cancelar</string>
 
 </resources>
