✨ Implement "Undo Snackbar" for Task completion
Implement a simple Snackbar to be shown when the user completes the
task. It informs which task was completed and give the ability to undo
the action, making the tasks return to the list.

--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
 
     <string name="task_add_save">Save</string>
     <string name="task_add_label">Task</string>
+
+    <string name="task_snackbar_message_complete">\"%s\" completed</string>
+    <string name="task_snackbar_button_undo">Undo</string>
 </resources>
