--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -16,4 +16,6 @@
     <string name="task_detail_cd_icon_remove_alarm">Remover alarme</string>
     <string name="task_add_save">Salvar</string>
     <string name="task_add_label">Tarefa</string>
+    <string name="task_snackbar_message_complete">\"%s\" finalizada</string>
+    <string name="task_snackbar_button_undo">Desfazer</string>
 </resources>
