--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,5 +3,5 @@
     <string name="home_title_tasks">Tarefas</string>
     <string name="home_title_search">Pesquisar</string>
     <string name="home_title_categories">Categorias</string>
-    <string name="home_title_settings">Preferências</string>
+    <string name="home_title_settings">Mais</string>
 </resources>
