✨ Add new Task Tracker item on "More" section
New item added in "More" section and minor UI changes to better look and
feel.

--- a/features/preference/src/main/res/values-pt-rBR/strings.xml
+++ b/features/preference/src/main/res/values-pt-rBR/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="preference_title_about">Sobre</string>
     <string name="preference_title_version">Versão</string>
+    <string name="preference_title_tracker">Acompanhamento de Tarefas</string>
     <string name="about_description">Alkaa (começar, iniciar em finlandês) é um gerenciador de tarefas simples para deixar sua vida mais fácil.\n\nTudo começou quando criei um projeto para aprender e me manter atualizado sobre os últimos componentes e bibliotecas Android. E agora esta disponível na sua versão com Jetpack Compose! Se você é um desenvolvedor ou entusiasta, sinta-se livre para acessar, copiar or atualizar o código aberto.\n\nMuito obrigado por usar o meu app!</string>
     <string name="about_button_project">Visite o projeto no GitHub</string>
 
