✨ Create Tracker Card Info
Card added at the bottom of the screen informing how many tasks were
completed in the last 30 days.

--- a/features/tracker/src/main/res/values-pt-rBR/strings.xml
+++ b/features/tracker/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,11 @@
     <string name="tracker_name_no_category">Sem categoria</string>
     <string name="tracker_cp_item_icon">Item finalizado</string>
 
+    <plurals name="tracker_message_title">
+        <item quantity="one">%1$d tarefa finalizada</item>
+        <item quantity="other">%1$d tarefas finalizadas</item>
+    </plurals>
+
+    <string name="tracker_message_description">Nos últimos 30 dias</string>
+    <string name="tracker_cp_info_icon">Tarefas finalizadas</string>
 </resources>
