--- a/features/tracker/src/main/res/values/strings.xml
+++ b/features/tracker/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
 <resources>
     <string name="tracker_name_no_category">No Category</string>
     <string name="tracker_cp_item_icon">Completed item</string>
+
+    <plurals name="tracker_message_title">
+        <item quantity="one">%1$d completed task</item>
+        <item quantity="other">%1$d completed tasks</item>
+    </plurals>
+
+    <string name="tracker_message_description">In the last 30 days</string>
+    <string name="tracker_cp_info_icon">Completed tasks</string>
 </resources>
