--- a/features/tracker/src/main/res/values-pt-rBR/strings.xml
+++ b/features/tracker/src/main/res/values-pt-rBR/strings.xml
@@ -10,4 +10,9 @@
 
     <string name="tracker_message_description">Nos últimos 30 dias</string>
     <string name="tracker_cp_info_icon">Tarefas finalizadas</string>
+
+    <string name="tracker_cd_empty">Sem tarefas finalizadas</string>
+    <string name="tracker_header_empty">Você ainda não completou nenhuma tarefa nos últimos 30 dias</string>
+    <string name="tracker_header_error">Ops… Isso é embaraçoso…</string>
+    <string name="tracker_cd_error">Algo deu errado</string>
 </resources>
