--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
 
     <string name="task_detail_alarm_no_alarm">No alarm</string>
 
-    <string name="task_add_save">Save</string>
+    <string name="task_add_save">Add</string>
     <string name="task_add_label">Task</string>
 
     <string name="task_snackbar_message_complete">\"%s\" completed</string>
