💄 Update Category TextField to match Alkaa UI
TextField updated to have a label in the OutlinedTextField instead of
a placeholder text.

--- a/features/category/src/main/res/values-pt-rBR/strings.xml
+++ b/features/category/src/main/res/values-pt-rBR/strings.xml
@@ -5,7 +5,7 @@
     <string name="category_icon_cd">Categoria</string>
     <string name="category_sheet_save">Salvar</string>
     <string name="category_cd_add_category">Adicionar categoria</string>
-    <string name="category_new_placeholder">Nova categoria</string>
+    <string name="category_add_label">Categoria</string>
 
     <string name="category_dialog_remove_title">Remover categoria</string>
     <string name="category_dialog_remove_text">Você tem certeza que deseja remover essa categoria?\nRemover \"%s\" também remove todas as tarefas abaixo dessa categoria.</string>
