--- a/features/preference/src/main/res/values-pt-rBR/strings.xml
+++ b/features/preference/src/main/res/values-pt-rBR/strings.xml
@@ -9,5 +9,7 @@
     <string name="preference_light_theme">Tema claro</string>
     <string name="preference_dark_theme">Tema escuro</string>
     <string name="preference_system_default_theme">Padrão do sistema</string>
+    <string name="preference_title_features">Funcionalidades</string>
+    <string name="preference_title_settings">Preferências</string>
 
 </resources>
