--- a/features/glance/src/main/res/values/strings.xml
+++ b/features/glance/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="glance_list_description">Shows your latest tasks</string>
     <string name="glance_list_loading">Loading</string>
     <string name="glance_list_preview_item_1">Buy milk</string>
-    <string name="glance_list_preview_item_2">Watch Howl\'s Moving Castle</string>
+    <string name="glance_list_preview_item_2">Watch Ponyo</string>
     <string name="glance_list_preview_item_3">Listen Local Natives</string>
 </resources>
